<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
    </group>
    <group>
        <item
            android:id="@+id/nav_registo"
            android:icon="@drawable/ic_registo"
            android:title="@string/registo_filme"/>
    </group>
    <group>
        <item
            android:id="@+id/nav_filmes_vistos"
            android:icon="@drawable/ic_filmes_vistos"
            android:title="@string/filmes_vistos"/>
    </group>
    <group>
        <item
            android:id="@+id/nav_extra"
            android:icon="@drawable/ic_person"
            android:title="@string/pesquisa_por_atores"/>
    </group>

</menu>
