<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RegistarFilmeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/purple_toolbar"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filme_layout"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/filme_label"
                    android:textColorHint="@color/white"
                    app:boxBackgroundColor="@color/outline_box_gray"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeErrorColor="@color/red"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperText=""
                    app:hintTextColor="@color/white"
                    app:startIconDrawable="@drawable/ic_filme"
                    app:startIconTint="@drawable/icon_selected">


                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/autoCompleteTextViewFilmes"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingStart="20dp"
                        android:textColor="@color/white"
                        android:inputType="textAutoComplete"
                        />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cinema_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/cinema_label"
                    android:textColorHint="@color/white"
                    app:boxBackgroundColor="@color/outline_box_gray"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeErrorColor="@color/red"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperText=""
                    app:hintTextColor="@color/white"
                    app:startIconDrawable="@drawable/ic_cinema"
                    app:startIconTint="@drawable/icon_selected">


                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/autoCompleteTextViewCinemas"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingStart="20dp"
                        android:textColor="@color/white"
                        android:inputType="textAutoComplete"
                        />


                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/rating"
                    android:textColor="@color/white" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="@style/RatingBarTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="20dp"
                    android:numStars="10"
                    android:rating="5"
                    android:stepSize="1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/data_layout"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/data"
                    android:textColorHint="@color/white"
                    app:boxBackgroundColor="@color/outline_box_gray"
                    app:boxStrokeColor="@color/white"
                    app:endIconDrawable="@drawable/ic_date_dropdown"
                    app:endIconMode="custom"
                    app:endIconTint="@drawable/icon_selected"
                    app:hintTextColor="@color/white"
                    app:startIconDrawable="@drawable/ic_calendar"
                    app:startIconTint="@drawable/icon_selected">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/data_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="textAutoComplete"
                        android:paddingStart="20dp"
                        android:textColor="@color/white" />


                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/image"
                        android:textColor="@color/white" />


                    <ImageButton
                        android:id="@+id/buttonCamera"
                        style="@style/ShapeAppearanceOverlay.Material3.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@color/violet"
                        android:padding="2dp"
                        android:src="@drawable/ic_camera">

                    </ImageButton>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/outline_box_gray"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="false">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </androidx.cardview.widget.CardView>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/observacoes_layout"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/observaçoes_label"
                    android:textColorHint="@color/white"
                    app:boxBackgroundColor="@color/outline_box_gray"
                    app:boxStrokeColor="@color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    app:counterTextColor="@color/white"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white"
                    app:helperText="* opcional"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white"
                    app:startIconDrawable="@drawable/ic_observacoes"
                    app:startIconTint="@drawable/icon_selected">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/observacoes_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="200"
                        android:paddingStart="20dp"
                        android:textColor="@color/white" />


                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/violet"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="24sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>