<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DetalhesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_cartaz"
                    android:layout_width="270dp"
                    android:layout_height="320dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:visibility="visible">

                </ImageView>

                <TextView
                    android:id="@+id/tv_genero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_dataLancamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="28dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="visible" />
            </LinearLayout>


            <TextView
                android:id="@+id/title_sinopse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sinopse"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/purple_toolbar"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/tv_sinopse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title_imdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/imdb"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/purple_toolbar"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_ratingIMDB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:visibility="visible" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/ic_star">

                        </ImageView>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/tv_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginBottom="28dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:visibility="visible"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/tv_votos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="15dp"
                            android:textColor="@color/gray"
                            android:textSize="14sp"
                            android:visibility="visible"
                            android:layout_weight="0.01"
                            android:layout_marginBottom="10dp"
                            android:layout_gravity="bottom"/>

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title_avaliacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/opiniao"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/purple_toolbar"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:visibility="visible" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/ic_star">

                        </ImageView>


                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_observacoes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:visibility="visible" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:visibility="visible">


            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/purple_toolbar"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">


                </androidx.recyclerview.widget.RecyclerView>


            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_detalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic"
                android:visibility="visible" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>